designed login and register page

--- a/src/app/component/users/login/login.component.html
+++ b/src/app/component/users/login/login.component.html
@@ -61,7 +61,7 @@
             <div class="mt-3 text-xs flex justify-between items-center">
                 <p class="text-gray-400">If you don't have an account?</p>
                 <button
-                    class=" hover:scale-105 duration-300 py-2 px-5 bg-orange-500  text-white rounded-xl ">Register</button>
+                    class=" hover:scale-105 duration-300 py-2 px-5 bg-orange-500  text-white rounded-xl " [routerLink]="['/register']">Register</button>
             </div>
         </div>
         <!-- image -->
