--- a/src/app/component/users/login/login.component.html
+++ b/src/app/component/users/login/login.component.html
@@ -5,19 +5,33 @@
         <!-- form -->
         <div class="md:w-1/2 px-16">
             <h2 class="font-bold text-3xl text-white">Login</h2>
-
-            <form #form="ngForm" (ngSubmit)="onSubmit(form)" class="flex flex-col gap-4">
-                <input type="email" name="email" placeholder="E-mail" #email="ngModel" ngModel required
+              <div *ngIf="isLoading">
+                <app-loading-spinner></app-loading-spinner>
+              </div>
+            <form #loginForm="ngForm" (ngSubmit)="login(loginForm)" class="flex flex-col gap-4" *ngIf="!isLoading">
+                <input type="email" name="email" placeholder="E-mail" #email="ngModel" ngModel required email
                     autocomplete="email" class="p-2 mt-8 rounded-xl border ">
-                <p *ngIf="email.invalid && email.touched" id="filled_success_help"
-                    class="text-xs px-2 text-red-600 dark:text-red-400"> Please
-                    Enter The Email.</p>
+                    <div *ngIf="errorMsg">
+
+                        <p class="text-xs px-2 text-red-600 dark:text-red-400"> {{errorMsg}}</p>
+                    </div>
+                    <div *ngIf="email.invalid && email.touched">
+                    <div *ngIf="email.errors && email.errors['required']">
+
+                        <p class="text-xs px-2 text-red-600 dark:text-red-400"> Please Enter the Email </p>
+                    </div>
+                    <div *ngIf="email.errors && email.errors['email']">
+
+                        <p class="text-xs px-2 text-red-600 dark:text-red-400"> Enter Valid Email</p>
+                    </div>
+                   
+                </div>
                 <div class="relative ">
                     <div class="flex items-center justify-between relative">
 
 
                         <input type="password" name="password" placeholder="password" #password="ngModel" required
-                            ngModel autocomplete="current-password" class="p-2 rounded-xl border w-full">
+                            ngModel minlength="6" autocomplete="current-password" class="p-2 rounded-xl border w-full">
 
                         <div class="bg-blend-overlay">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -28,13 +42,22 @@
                                     d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z" />
                             </svg>
                         </div>
+
                     </div>
-                    <p *ngIf="password.invalid && password.touched" id="filled_success_help"
-                        class=" pt-2 px-2 mt-2 text-xs text-red-600 dark:text-red-400">
-                        Please Enter The Password.</p>
+                    <div *ngIf="password.invalid && password.touched">
+                        <div *ngIf="password.errors && password.errors['required']">
+                            <p id="filled_success_help" class=" pt-2 px-2 mt-2 text-xs text-red-600 dark:text-red-400">
+                                Please Enter the Password.</p>
+                        </div>
+                        <div *ngIf="password.errors && password.errors['minlength']">
+                            <p id="filled_success_help" class=" pt-2 px-2 mt-2 text-xs text-red-600 dark:text-red-400">
+                                Password should be of 6 characters</p>
+                              
+                        </div>
+                    </div>
                 </div>
-                <input type="submit" value="Login" [disabled]="!form.valid"
-                    class="bg-orange-500 rounded-xl   text-white py-2 hover:scale-105 duration-300">
+                <button type="submit" [disabled]="!loginForm.valid"
+                    class="  bg-orange-500 rounded-xl   text-white py-2 hover:scale-105 duration-300">Login</button>
             </form>
             <div class="mt-10 grid grid-cols-3 items-center text-gray-400">
                 <hr class="border-gray-400">
@@ -52,16 +75,18 @@
                         d="M24,44c5.166,0,9.86-1.977,13.409-5.192l-6.19-5.238C29.211,35.091,26.715,36,24,36c-5.202,0-9.619-3.317-11.283-7.946l-6.522,5.025C9.505,39.556,16.227,44,24,44z" />
                     <path fill="#1976D2"
                         d="M43.611,20.083H42V20H24v8h11.303c-0.792,2.237-2.231,4.166-4.087,5.571c0.001-0.001,0.002-0.001,0.003-0.002l6.19,5.238C36.971,39.205,44,34,44,24C44,22.659,43.862,21.35,43.611,20.083z" />
-                </svg>Login With Google</button>
+                </svg>Login With Google
+               
+            </button>
 
-
+           
             <p data-modal-target="authentication-modal" data-modal-toggle="authentication-modal"
                 class="mt-5 text-xs border-b py-4 text-gray-400 border-gray-400 cursor-pointer  hover:text-orange-500  duration-300 ">
                 Forgot your password?</p>
             <div class="mt-3 text-xs flex justify-between items-center">
                 <p class="text-gray-400">If you don't have an account?</p>
-                <button
-                    class=" hover:scale-105 duration-300 py-2 px-5 bg-orange-500  text-white rounded-xl " [routerLink]="['/register']">Register</button>
+                <button class=" hover:scale-105 duration-300 py-2 px-5 bg-orange-500  text-white rounded-xl "
+                    [routerLink]="['/register']">Register</button>
             </div>
         </div>
         <!-- image -->
@@ -159,11 +184,14 @@
                         <button type="submit"
                             class="w-32 mx-7 text-white bg-orange-500  hover:scale-105 duration-300 focus:outline-none  font-medium rounded-lg text-sm px-5 py-2.5 text-center">Verify</button>
                         <div class="text-sm font-normal text-white dark:text-gray-300 ">
-                            <a *ngIf="!startTimer" class="mx-2  text-orange-500 cursor-pointer duration-300  " (click)="timer()">Resend 
+                            <a *ngIf="!startTimer" class="mx-2  text-orange-500 cursor-pointer duration-300  "
+                                (click)="timer()">Resend
                                 OTP</a>
-                            <a *ngIf="startTimer" class="mx-2  text-orange-500 cursor-pointer duration-300 "><span class="mx-2  text-white cursor-pointer duration-300 ">Resend OTP In </span>{{remainingTime}}</a>
+                            <a *ngIf="startTimer" class="mx-2  text-orange-500 cursor-pointer duration-300 "><span
+                                    class="mx-2  text-white cursor-pointer duration-300 ">Resend OTP In
+                                </span>{{remainingTime}}</a>
                         </div>
-                       
+
                     </form>
                 </div>
             </div>
