route guard ,interceptor added

--- a/src/app/component/users/home/home.component.html
+++ b/src/app/component/users/home/home.component.html
@@ -1,1 +1,4 @@
-<p>home works!</p>
+<app-navbar></app-navbar>
+<section class="min-h-screen flex items-center justify-center bg-red-100">
+</section>
+<app-footer></app-footer>
