--- a/src/app/component/users/login/login.component.html
+++ b/src/app/component/users/login/login.component.html
@@ -16,9 +16,9 @@
             <form #loginForm="ngForm" (ngSubmit)="login(loginForm)" class="flex flex-col gap-4" *ngIf="!isLoading">
                 <input type="email" name="email" placeholder="E-mail" #email="ngModel" ngModel required email
                     autocomplete="email" class="p-2 mt-8 rounded-xl border ">
-                <div *ngIf="errorMsg && !email.touched && !email.dirty && email.invalid" >
+                <div *ngIf="loginErrorMessage && !email.touched && !email.dirty && email.invalid">
 
-                    <p class="text-xs px-2 text-red-600 dark:text-red-400"> {{errorMsg}}</p>
+                    <p class="text-xs px-2 text-red-600 dark:text-red-400"> {{loginErrorMessage}}</p>
                 </div>
                 <div *ngIf="email.invalid && email.touched">
                     <div *ngIf="email.errors && email.errors['required']">
@@ -85,9 +85,11 @@
             </button>
 
 
+
             <p data-modal-target="authentication-modal" data-modal-toggle="authentication-modal"
                 class="mt-5 text-xs border-b py-4 text-gray-400 border-gray-400 cursor-pointer  hover:text-orange-500  duration-300 ">
                 Forgot your password?</p>
+
             <div class="mt-3 text-xs flex justify-between items-center">
                 <p class="text-gray-400">If you don't have an account?</p>
                 <button class=" hover:scale-105 duration-300 py-2 px-5 bg-orange-500  text-white rounded-xl "
@@ -100,108 +102,126 @@
         </div>
 
     </div>
-
-
-    <!-- modal -->
-    <div id="authentication-modal" tabindex="-1" aria-hidden="true" data-modal-backdrop="static"
-        class="fixed top-0 left-0 right-0 z-50 hidden w-full p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] max-h-full">
-        <div class="relative w-full max-w-md max-h-full">
-            <!-- Modal content -->
-            <div class="relative bg-gray-950  rounded-lg shadow dark:bg-gray-700">
-                <button type="button"
-                    class="absolute top-3 right-2.5 text-white bg-transparent hover:bg-gray-950 hover:text-orange-500  rounded-lg text-sm w-8 h-8 ml-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
-                    data-modal-hide="authentication-modal">
-                    <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
-                        viewBox="0 0 14 14">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
-                    </svg>
-                    <span class="sr-only">Close modal</span>
-                </button>
-                <div class="px-6 py-6 lg:px-8">
-                    <h3 class="mb-4 text-xl font-medium text-white dark:text-white">forgot Your password?</h3>
-                    <form class="space-y-6" (click)="timer()">
-                        <div>
-                            <label for="email" class="block mb-2 text-sm font-medium text-white dark:text-white">
-                            </label>
-                            <input type="email" name="email" id="email"
-                                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
-                                placeholder="E-mail" required>
-                        </div>
-
-
-                        <button type="submit" data-modal-target="authentication-modal2"
-                            data-modal-toggle="authentication-modal2"
-                            class="w-full text-white bg-orange-500  hover:scale-105 duration-300 focus:outline-none  font-medium rounded-lg text-sm px-5 py-2.5 text-center">Reset</button>
-
-                    </form>
-                    <div class="text-sm  my-7 font-medium text-white dark:text-gray-300">
-                        Not registered? <a
-                            class="text-gray-500 hover:text-orange-500 cursor-pointer duration-300">Create
-                            account</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- modal 2 -->
-    <div id="authentication-modal2" data-modal-backdrop="static" tabindex="-1" aria-hidden="true"
-        class="fixed top-0 left-0 right-0 z-50 hidden w-full p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] max-h-full">
-        <div class="relative w-full max-w-md max-h-full">
-            <!-- Modal content -->
-            <div class="relative bg-gray-950  rounded-lg shadow dark:bg-gray-700">
-                <button type="button" (click)="resetTimer()"
-                    class="absolute top-3 left-2.5 text-white bg-transparent hover:text-orange-500  rounded-lg text-sm w-8 h-8 ml-auto inline-flex justify-center items-center "
-                    data-modal-hide="authentication-modal2"><svg
-                        class="w-[19px] h-[19px] text-white dark:text-white hover:text-orange-500 " aria-hidden="true"
-                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="0.9"
-                            d="M13 5H1m0 0 4 4M1 5l4-4" />
-                    </svg></button>
-                <button type="button" (click)="resetTimer()"
-                    class="absolute top-3 right-2.5 text-white bg-transparent hover:bg-gray-950 hover:text-orange-500  rounded-lg text-sm w-8 h-8 ml-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
-                    data-modal-hide="authentication-modal2">
-                    <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
-                        viewBox="0 0 14 14">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
-                    </svg>
-                    <span class="sr-only">Close modal</span>
-                </button>
-                <div class="px-6 py-6 lg:px-8">
-                    <h3 class="mb-4  my-7 text-xl font-medium text-white dark:text-white">forgot Your password?</h3>
-                    <p class="mb-2 text-sm font-normal text-white">otp sent to <span
-                            class="text-orange-500">---email----</span> </p>
-                    <form class="space-y-6" action="#">
-                        <div>
-                            <label for="email" class="block mb-2 text-sm font-medium text-white dark:text-white">
-                            </label>
-                            <input type="email" name="email" id="email"
-                                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
-                                placeholder=" Enter The Otp" required>
-                        </div>
-
-
-                        <button type="submit"
-                            class="w-36 text-white bg-orange-500 opacity-70  hover:scale-105 duration-300 focus:outline-none  font-medium rounded-lg text-sm py-2.5 text-center">Change
-                            Email</button>
-                        <button type="submit"
-                            class="w-32 mx-7 text-white bg-orange-500  hover:scale-105 duration-300 focus:outline-none  font-medium rounded-lg text-sm px-5 py-2.5 text-center">Verify</button>
-                        <div class="text-sm font-normal text-white dark:text-gray-300 ">
-                            <a *ngIf="!startTimer" class="mx-2  text-orange-500 cursor-pointer duration-300  "
-                                (click)="timer()">Resend
-                                OTP</a>
-                            <a *ngIf="startTimer" class="mx-2  text-orange-500 cursor-pointer duration-300 "><span
-                                    class="mx-2  text-white cursor-pointer duration-300 ">Resend OTP In
-                                </span>{{remainingTime}}</a>
-                        </div>
-
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
 </section>
+<!-- modal 1 -->
+
+<div id="authentication-modal" tabindex="-1" aria-hidden="true" data-modal-backdrop="static"
+    class="fixed top-0 left-0 right-0 z-50 hidden w-full p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] max-h-full">
+    <div class="relative w-full max-w-md max-h-full">
+        <!-- Modal content -->
+        <div class="relative bg-gray-950  rounded-lg shadow ">
+            <!-- closing modal -->
+            <button type="button"
+                class="absolute top-3 right-2.5 text-white bg-transparent hover:bg-gray-950 hover:text-orange-500  rounded-lg text-sm w-8 h-8 ml-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
+                data-modal-hide="authentication-modal">
+                <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                    viewBox="0 0 14 14">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
+                </svg>
+                <span class="sr-only">Close modal</span>
+            </button>
+            <div class="px-6 py-6 lg:px-8">
+                <h3 class="mb-4 text-xl font-medium text-white dark:text-white">forgot Your password?</h3>
+                <!-- modal form -->
+
+
+                <form class="space-y-6" #modalForm="ngForm" (ngSubmit)="forgotPassword(modalForm)">
+
+                    <input type="email" name="email" required email #email="ngModel" ngModel
+                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+                        placeholder="E-mail">
+                    <div *ngIf="isLoading">
+                        <app-loading-spinner></app-loading-spinner>
+                    </div>
+                  
+                    <button type="submit" [disabled]=" !modalForm.valid "
+                        class="w-full text-white bg-orange-500  hover:scale-105 duration-300 focus:outline-none  font-medium rounded-lg text-sm px-5 py-2.5 text-center">
+                        Reset</button>
+
+                    <!-- //validation message -->
+                    <div *ngIf=" PasswordErrorMessage && !email.invalid  && !email.errors">
+
+                        <p class="text-xs px-2 text-red-600 dark:text-red-400"> {{PasswordErrorMessage}}</p> 
+                    </div>
+                   
+                    <div *ngIf="email.invalid && email.touched">
+                        <div *ngIf="email.errors && email.errors['required']">
+
+                            <p class="text-xs px-2 text-red-600 dark:text-red-400"> Please Enter the Email </p>
+                        </div>
+                        <div *ngIf="email.errors && email.errors['email']">
+
+                            <p class="text-xs px-2 text-red-600 dark:text-red-400"> Enter Valid Email</p>
+                        </div>
+
+                    </div>
+
+                </form>
+                <div class="text-sm  my-7 font-medium text-white dark:text-gray-300">
+                    Not registered? <a [routerLink]="['/register']"
+                        class="text-gray-500 hover:text-orange-500 cursor-pointer duration-300">Create
+                        account</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- modal 2 -->
+<!-- <div id="authentication-modal2" data-modal-backdrop="static" tabindex="-1" aria-hidden="true"
+    class="fixed top-0 left-0 right-0 z-50 hidden w-full p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] max-h-full">
+    <div class="relative w-full max-w-md max-h-full">
+        <!-- Modal content -->
+<!-- <div class="relative bg-gray-950  rounded-lg shadow dark:bg-gray-700">
+            <button type="button" (click)="resetTimer()"
+                class="absolute top-3 left-2.5 text-white bg-transparent hover:text-orange-500  rounded-lg text-sm w-8 h-8 ml-auto inline-flex justify-center items-center "
+                data-modal-hide="authentication-modal2"><svg
+                    class="w-[19px] h-[19px] text-white dark:text-white hover:text-orange-500 " aria-hidden="true"
+                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="0.9"
+                        d="M13 5H1m0 0 4 4M1 5l4-4" />
+                </svg></button>
+            <button type="button" (click)="resetTimer()"
+                class="absolute top-3 right-2.5 text-white bg-transparent hover:bg-gray-950 hover:text-orange-500  rounded-lg text-sm w-8 h-8 ml-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
+                data-modal-hide="authentication-modal2">
+                <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                    viewBox="0 0 14 14">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
+                </svg>
+                <span class="sr-only">Close modal</span>
+            </button>
+            <div class="px-6 py-6 lg:px-8">
+                <h3 class="mb-4  my-7 text-xl font-medium text-white dark:text-white">forgot Your password?</h3>
+                <p class="mb-2 text-sm font-normal text-white">otp sent to <span
+                        class="text-orange-500">---email----</span> </p>
+                <form class="space-y-6" action="#">
+                    <div>
+                        <label for="email" class="block mb-2 text-sm font-medium text-white dark:text-white">
+                        </label>
+                        <input type="email" name="email" id="email"
+                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
+                            placeholder=" Enter The Otp" required>
+                    </div>
+
+
+                    <button type="submit"
+                        class="w-36 text-white bg-orange-500 opacity-70  hover:scale-105 duration-300 focus:outline-none  font-medium rounded-lg text-sm py-2.5 text-center">Change
+                        Email</button>
+                    <button type="submit"
+                        class="w-32 mx-7 text-white bg-orange-500  hover:scale-105 duration-300 focus:outline-none  font-medium rounded-lg text-sm px-5 py-2.5 text-center">Verify</button>
+                    <div class="text-sm font-normal text-white dark:text-gray-300 ">
+                        <a *ngIf="!startTimer" class="mx-2  text-orange-500 cursor-pointer duration-300  "
+                            (click)="timer()">Resend
+                            OTP</a>
+                        <a *ngIf="startTimer" class="mx-2  text-orange-500 cursor-pointer duration-300 "><span
+                                class="mx-2  text-white cursor-pointer duration-300 ">Resend OTP In
+                            </span>{{remainingTime}}</a>
+                    </div>
+
+                </form>
+            </div>
+        </div>
+    </div>
+</div> -->
