--- a/src/app/component/users/otp/otp.component.html
+++ b/src/app/component/users/otp/otp.component.html
@@ -11,16 +11,22 @@
         <div class="md:w-1/2 px-16 ">
             <h3 class="mb-4  my-7 text-xl font-medium text-white dark:text-white">forgot Your password?</h3>
             <p class="mb-2 text-xs font-normal text-white">otp sent to <span
-                    class="text-orange-500 text-sm">{{email}}</span>
+                    class="text-green-400 text-sm">{{email}}</span>
             </p>
 
             <div *ngIf="isLoading">
                 <app-loading-spinner></app-loading-spinner>
             </div>
-            <form #otpForm="ngForm" (ngSubmit)="veryfyOtp(otpForm)" class="space-y-14 my-10">
+
+            <div *ngIf=" otpErrorMessage">
+
+                <p class="text-xs px-2 text-red-600 dark:text-red-400"> {{ otpErrorMessage}}</p>
+            </div>
+
+            <form #otpForm="ngForm" (click)="veryfyOtp(otpForm)" class="space-y-14 my-10">
                 <div>
 
-                    <input type="text" name="otp"
+                    <input type="text" name="otp" #otp="ngModel" ngModel minlength="4" maxlength="4"
                         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
                         placeholder=" Enter The Otp" required>
                 </div>
@@ -30,10 +36,11 @@
                     class="w-35  text-white bg-orange-500 opacity-70 mx-2 hover:scale-105 duration-300 focus:outline-none  font-normal rounded-lg text-xs py-2.5 text-center">Change
                     Email</button> -->
                 <button type="submit"
-                    class="w-30 mx-4  text-white bg-orange-500  hover:scale-105 duration-300 focus:outline-none  font-medium rounded-lg text-xs px-5 py-2.5 text-center">Verify</button>
+                    class="w-30 mx-4  text-white bg-orange-500  hover:scale-105 duration-300 focus:outline-none  font-medium rounded-lg text-xs px-5 py-2.5 text-center"
+                    [disabled]=" !otpForm.valid ">Verify</button>
                 <div class="text-sm font-normal text-white dark:text-gray-300 ">
                     <a *ngIf="!startTimer" class="mx-2  text-orange-500 cursor-pointer duration-300 "
-                        (click)="timer()">Resend
+                        (click)="restartTimer()">Resend
                         OTP</a>
                     <a *ngIf="startTimer" class="mx-2  text-orange-500 cursor-pointer duration-300 "><span
                             class="mx-2  text-white cursor-pointer duration-300  my-0">Resend OTP In
