--- a/src/app/component/users/navbar/navbar.component.html
+++ b/src/app/component/users/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="bg-white border-gray-200 dark:bg-gray-900 fixed w-full shadow-xl" *ngIf="user">
+<nav class="bg-white border-gray-200 dark:bg-gray-900 fixed w-full shadow-xl" >
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 ">
     <a href="https://flowbite.com/" class="flex items-center">
       <img src="../../../../assets/image/Groupnow me logo.png" class="h-8 mr-3" alt="now&meLogo" />
