--- a/src/app/component/users/register/register.component.html
+++ b/src/app/component/users/register/register.component.html
@@ -1,39 +1,47 @@
 <section class="min-h-screen flex items-center justify-center bg-red-100">
     <!-- login container -->
-    <div class="bg-gray-950 flex rounded-2xl shadow-lg max-w-3xl  p-8 items-center">
-
+    <div class="bg-gray-950 flex rounded-2xl shadow-lg max-w-3xl p-8 items-center">
         <!-- form -->
         <div class="md:w-1/2 px-16">
             <h2 class="font-bold text-3xl text-white">Sign Up</h2>
 
-            <form #form="ngForm" class="flex flex-col gap-4">
-                <input type="text" name="name" placeholder="name" #email="ngModel" ngModel required
-                    autocomplete="given-name" class="p-2 mt-8 rounded-xl border ">
-                <input type="email" name="email" placeholder="E-mail" #email="ngModel" ngModel required
-                    autocomplete="email" class="p-2 rounded-xl border ">
-                <div class="relative ">
-                    <div class="flex items-center justify-between relative">
-
-                        <input type="password" name="password" placeholder="password" #password="ngModel" required
-                            ngModel autocomplete="current-password" class="p-2 rounded-xl border w-full">
-
-                        <div class="bg-blend-overlay">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="  bi bi-eye absolute top-1/2 right-3  -translate-y-1/2 ">
-                                <path
-                                    d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z" />
-                                <path
-                                    d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z" />
-                            </svg>
-                        </div>
-                    </div>                             
+            <form [formGroup]="form" (submit)="submit()" class="flex flex-col gap-4">
+                <input type="text" name="name" placeholder="name" formControlName="name"
+                    [ngClass]="{'border-red-500': register && f['name'].errors}" autocomplete="given-name"
+                    class="p-2 mt-8 rounded-xl border">
+                <div *ngIf="register && f['name'].errors" class="text-xs px-2 text-red-600 dark:text-red-400">
+                    <div *ngIf="f['name'].errors['required']" class="p-2">Name is required</div>
                 </div>
 
-                <input type="password" name="password" placeholder="password" #password="ngModel" required ngModel
-                    autocomplete="current-password" class="p-2 rounded-xl border w-full">
+                <input type="email" name="email" placeholder="E-mail" formControlName="email" autocomplete="email"
+                    class="p-2 rounded-xl border" [ngClass]="{'border-red-500': register && f['email'].errors}">
+                <div *ngIf="register && f['email'].errors" class="text-xs px-2 text-red-600 dark:text-red-400">
+                    <div *ngIf="f['email'].errors['required']" class="p-2">Email is required</div>
+                    <div *ngIf="f['email'].errors['pattern']" class="p-2">Invalid Email</div>
+                </div>
 
-                <input type="submit" value="Sign Up" [disabled]="!form.valid"
-                    class="bg-orange-500 rounded-xl   text-white py-2 hover:scale-105 duration-300">
+                <div class="relative">
+                    <input type="password" placeholder="password" formControlName="password"
+                        [ngClass]="{'border-red-500': register && f['password'].errors}"
+                        class="p-2 rounded-xl border w-full">
+                    <div>
+                        <div *ngIf="register && f['password'].errors" class="text-xs px-2 text-red-600 dark:text-red-400">
+                            <p *ngIf="f['password'].errors['required']">Password is required</p>
+                            <span *ngIf="f['password'].errors['pattern']" class="p-2">Password requires at least one special character</span>
+                            <p *ngIf="f['password'].errors['minlength']">At least 8 characters required</p>
+                        </div>
+                    </div>
+                    <!-- Password strength indicator -->
+                    <div class="bg-blend-overlay">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-eye absolute top-1/2 right-3 -translate-y-1/2">
+                            <!-- Eye icon path -->
+                        </svg>
+                    </div>
+                </div>
+
+                <input type="submit" value="Sign Up"
+                    class="bg-orange-500 rounded-xl text-white py-2 hover:scale-105 duration-300">
             </form>
             <div class="mt-10 grid  items-center text-gray-400">
                 <hr class="border-gray-400">
@@ -45,8 +53,8 @@
 
             <div class="mt-3 text-xs flex justify-between items-center">
                 <p class="text-gray-400">Already have an account?</p>
-                <button
-                    class="text-xs hover:scale-105 duration-300 py-1 px-3 bg-orange-500  text-white rounded-xl" [routerLink]="['/login']">Sign
+                <button class="text-xs hover:scale-105 duration-300 py-1 px-3 bg-orange-500  text-white rounded-xl"
+                    [routerLink]="['/login']">Sign
                     in</button>
             </div>
         </div>
@@ -59,8 +67,8 @@
                         d="M6 0H2a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h4v1a3 3 0 0 1-3 3H2a1 1 0 0 0 0 2h1a5.006 5.006 0 0 0 5-5V2a2 2 0 0 0-2-2Zm10 0h-4a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h4v1a3 3 0 0 1-3 3h-1a1 1 0 0 0 0 2h1a5.006 5.006 0 0 0 5-5V2a2 2 0 0 0-2-2Z" />
                 </svg>
                 <blockquote>
-                    <p class="text-lg italic font-mono font-medium text-white dark:text-white m-9 brightness-75">Your journey to a <span
-                            class="text-orange-500">happier</span>
+                    <p class="text-lg italic font-mono font-medium text-white dark:text-white m-9 brightness-75">Your
+                        journey to a <span class="text-orange-500">happier</span>
                         life begins here</p>
                 </blockquote>
 
