--- a/src/app/component/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/component/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,15 +1,11 @@
-<section>
-    <app-navbar></app-navbar>
-    <div class="flex">
-        <div class="h-full">
-            <app-sidebar></app-sidebar>
-            <div class="min-h-screen flex items-center justify-center">
-                <div class="p-8 bg-white shadow-md rounded-md">
-                    <!-- table              -->
-                   
-                    <!-- table end -->
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+<app-navsidebar></app-navsidebar>
+
+<div class="p-4 sm:ml-64">
+    <div class="p-4 border-2 border-gray-200 border-dashed rounded-lg dark:border-gray-700 mt-14">
+
+
+
+
+
+           </div>
+</div>
