--- a/src/app/component/users/home/home.component.html
+++ b/src/app/component/users/home/home.component.html
@@ -181,7 +181,8 @@
                     Come be a part of our safe, supportive &amp; inclusive community. Share your thoughts and feelings,
                     to get words of encouragement from fellow users.</p>
                 <button
-                    class="  my-7  bg-orange-500  hover:bg-orange-600 active:bg-orange-700 focus:outline-none focus:ring-orange-300 text-white py-3 px-20 rounded-lg ">
+                    class="  my-7  bg-orange-500  hover:bg-orange-600 active:bg-orange-700 focus:outline-none focus:ring-orange-300 text-white py-3 px-20 rounded-lg "
+                    (click)="navigateTocommunity()">
                     Share Thought</button>
                 <div class="flex justify-start space-x-6 pt-6 relative z-20">
                     <div>
@@ -332,7 +333,7 @@
                 </div>
             </div>
         </div>
-
+        <button (click)="check()" class="bg-slate-950 text-white">check</button>
     </section>
 
 
