--- a/src/app/component/users/navbar/navbar.component.html
+++ b/src/app/component/users/navbar/navbar.component.html
@@ -62,16 +62,16 @@
             class="block py-2 pl-3 pr-4 text-gray-900 font-bold  rounded hover:bg-gray-100 md:hover:bg-transparent md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Experts</a>
         </li>
         <li>
-          <a href="#"
+          <a routerLink="/community"
             class="block py-2 pl-3 pr-4 text-gray-900 font-bold  rounded hover:bg-gray-100 md:hover:bg-transparent md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Community</a>
         </li>
         <li>
-          <a href="#"
-            class="block py-2 pl-3 pr-4 text-gray-900 font-bold  rounded hover:bg-gray-100 md:hover:bg-transparent md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Blog</a>
+          <a routerLink="/schedules"
+            class="block py-2 pl-3 pr-4 text-gray-900 font-bold  rounded hover:bg-gray-100 md:hover:bg-transparent md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Schedules</a>
         </li>
         <li>
-          <a href="#"
-            class="block py-2 pl-3 pr-4 text-gray-900 font-bold  rounded hover:bg-gray-100 md:hover:bg-transparent md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Contact</a>
+          <a routerLink="/profile"
+            class="block py-2 pl-3 pr-4 text-gray-900 font-bold  rounded hover:bg-gray-100 md:hover:bg-transparent md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Profile</a>
         </li>
       </ul>
     </div>
