--- a/src/app/component/users/community/community.component.html
+++ b/src/app/component/users/community/community.component.html
@@ -37,7 +37,7 @@
         </div>
 
     </section>
-    <section class="view thoughts">
+    <section class="view thoughts mb-20">
         <div class="pl-32 pr-32 pt-1 ">
             <div *ngFor="let thoughts of  allThoughts" class="border-slate-00 border-[1px]  md:pl-9 flex md:p-4">
 
