--- a/src/app/component/users/footer/footer.component.html
+++ b/src/app/component/users/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="bg-white rounded-lg shadow dark:bg-gray-900 m-4 md:mb-1">
+<footer class="bg-white rounded-lg shadow dark:bg-gray-900 m-4 md:mb-1 mt-32">
     <div class="w-full max-w-screen-xl mx-auto bottom-0 p-4 md:py-8">
         <div class="sm:flex sm:items-center sm:justify-between">
             <a class="flex items-center mb-4 sm:mb-0">
